--- a/css/theme-blue.css
+++ b/css/theme-blue.css
@@ -232,6 +232,7 @@ footer {
     border-color: #45585e;
     padding-top: 30px;
     z-index: 100;
+    padding-bottom: 20px;
 }
 
 #uk-container {
@@ -269,4 +270,10 @@ hr.shaded {
 
 .rd-footer-left .rd-footermenu > div.moduletable > ul.nav.menu > li > a:hover {
     background-color: #14D5B0;
+}
+
+.rd-800-beam {
+    font-weight: normal;
+    font-size: 150%;
+    padding: 15px 0 15px;
 }
